<resources>
    <string name="app_name">TicTacToe</string>

    <string name="homeTitle">Tic Tac Toe</string>
    <string name="playButton">Play</string>
    <string name="aboutButton">About</string>

    <string name="aboutTitle">About This App</string>
    <string name="aboutText">Coded With Love By: Companie Micky</string>


    <string name="playerSetupTitle">Enter Your Name</string>
    <string name="label1">Player 1</string>
    <string name="label2">Player 2</string>
    <string name="submitButton">Submit Names</string>
    <string name="nameHint">Enter Your Name</string>

    <string name="playAgainButton">Play Again</string>
    <string name="homeButton">Home</string>

</resources>